examples/type_system/failing/03_runtime_return_violation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/03_runtime_return_violation.flx
// error[E300]: Return Type Mismatch
//
// The body of `bad` does not match its declared return type.
//
//   examples/type_system/failing/03_runtime_return_violation.flx:28:5
//    |
// 27 | fn bad() -> Int {
//    |             --- `bad` was declared to return `Int`
// 28 |     "not-an-int"
//    |     ^^^^^^^^^^^^
//    |     ------------ this expression has type `String`
//
// Note:
//   declared return type: Int
//   body type: String
//
// Help:
//   Return a `Int` value from `bad` or change its annotation.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn bad() -> Int {
    "not-an-int"
}

// Runtime contract violation on function return boundary.
bad()
